commit funny english

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>My AngularJS App Normal</title>
+    <title>Funny English</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="bower_components/html5-boilerplate/css/normalize.css">
@@ -28,6 +28,7 @@
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="bower_components/angular-infinite-scroll/infinite-scroll.js"></script>
     <script src="bower_components/parse/parse.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="bower_components/angular-busy/angular-busy.js"></script>
@@ -42,7 +43,12 @@
     <script src="components/version/version.js"></script>
     <script src="components/version/version-directive.js"></script>
     <script src="components/version/interpolate-filter.js"></script>
-    <script src="tracker/tracker.js"></script>
-    
+    <!--vocabulary-->
+    <script src="modules/vocabulary/vocabulary.module.js"></script>
+    <script src="modules/vocabulary/vocabulary.route.js"></script>
+    <script src="modules/vocabulary/vocabulary.service.js"></script>
+    <script src="modules/vocabulary/vocabulary.model.js"></script>
+    <script src="modules/vocabulary/vocabulary.js"></script>
+    <script src="modules/vocabulary/vocabulary.creation.js"></script>
 </body>
 </html>
