--- a/app/timesheet.controller.html
+++ b/app/timesheet.controller.html
@@ -1,14 +1,17 @@
 ﻿<div style="margin-top: 50px">
-
-    <div class="row">
-        <div class="col-lg-2" ng-class="{'offset-lg-1': $index === 0}" ng-repeat="timesheet in model.timesheets"
+    <div class="row mb-3">
+        <div class="col offset-lg-1"><h2>{{model.week.title}}</h2></div>
+    </div>
+    <div class="row timesheet">
+        <div class="col-lg-2" ng-class="{'offset-lg-1': $index === 0, active: model.selectedTimesheet.id == timesheet.id}" ng-repeat="timesheet in model.week.timesheets"
             ng-click="model.onTimesheetClick(timesheet)">
-            <div class="card flex-fill">
+
+            <div class="card flex-fill" ng-class="{active: model.selectedTimesheet.id === timesheet.id}">
                 <div class="card-body">
                     <div class="row">
                         <div class="col-12 col-md-6 align-self-center text-center text-md-left">
                             <h4>{{timesheet.totalHours}}</h4>
-                            <p class="mb-0">{{timesheet.title}}</p>
+                            <p class="mb-0">{{timesheet.date.format('ddd DD/MM')}}</p>
                         </div>
                     </div>
                 </div>
@@ -45,19 +48,24 @@
                 <div class="col-1">
                     <input type="text" class="form-control" id="inlineFormInputName2" ng-model="timeEntry.duration">
                 </div>
-                <div class="col-9">
+                <div class="col-8">
                     <input type="text" class="form-control " id="inlineFormInputName2" ng-model="timeEntry.description">
+                </div>
+                <div class="col-1 text-right">
+                    <button type="button" class="btn btn-link" ng-click="model.deleteTimeEntry($index)">
+                        <i class="fas fa-trash-alt fa-lg"></i>
+                    </button>
                 </div>
             </form>
             <div class="row" ng-if="model.selectedTimesheet">
                 <div class="col">
-                    <button type="button" class="btn btn-link" ng-click="model.addNewEntry()">
+                    <button type="button" class="btn btn-link" ng-click="model.addNewTimeEntry()">
                         <i class="fas fa-plus fa-lg"></i>
                         Add new entry
                     </button>
                 </div>
                 <div class="col text-right">
-                    <button type="button" class="btn btn-success pull-right" ng-click="model.saveTimesheet">
+                    <button type="button" class="btn btn-success pull-right" ng-click="model.saveTimesheet()">
                         <i class="fa fa-check fa-lg"></i>
                         Save
                     </button>
