--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="app/app.css">
     <link href="scripts/jquery-roadmap/jquery.roadmap.min.css" rel="stylesheet" />
     <link href="contents/bootstrap.min.css" rel="stylesheet" />
+    <link href="contents/ng-alertify.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 </head>
 <body>
@@ -23,14 +24,18 @@
     <script src="scripts/lodash.js"></script>
     <script src="scripts/moment.js"></script>
     <script src="scripts/mask.js"></script>
+    <script src="scripts/ngStorage.js"></script>
+    <script src="scripts/ng-alertify.js"></script>
 
 
     <script src="scripts/jquery-roadmap/jquery.roadmap.js"></script>
 
     <script src="app/app.js"></script>
+    <script src="app/services/timesheetService.js"></script>
     <script src="app/sprint.controller.js"></script>
     <script src="app/timesheet.controller.js"></script>
     <script src="app/directives/timeline.directive.js"></script>
+    
     <script src="app/app.value.js"></script>
 </body>
 </html>
