--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="scripts/jquery-roadmap/jquery.roadmap.min.css" rel="stylesheet" />
     <link href="contents/bootstrap.min.css" rel="stylesheet" />
     <link href="contents/ng-alertify.css" rel="stylesheet" />
+    <link href="contents/angular-material.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 </head>
 <body>
@@ -26,6 +27,10 @@
     <script src="scripts/mask.js"></script>
     <script src="scripts/ngStorage.js"></script>
     <script src="scripts/ng-alertify.js"></script>
+    <script src="scripts/angular-messages.min.js"></script>
+    <script src="scripts/angular-animate.min.js"></script>
+    <script src="scripts/angular-aria.min.js"></script>
+    <script src="scripts/angular-material.js"></script>
 
 
     <script src="scripts/jquery-roadmap/jquery.roadmap.js"></script>
