--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <html lang="en" ng-app="myApp" class="no-js">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,12 +12,32 @@
     <link href="contents/bootstrap.min.css" rel="stylesheet" />
     <link href="contents/ng-alertify.css" rel="stylesheet" />
     <link href="contents/angular-material.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
+        crossorigin="anonymous">
 </head>
+
 <body>
     <div ng-app="myApp" class="container-fluid">
         <ui-view></ui-view>
     </div>
+
+    <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-database.js"></script>
+
+    <script>
+        // Initialize Firebase
+        var config = {
+            apiKey: "AIzaSyAq-OFWZFR-h6TR4U74ME9xvp8HwtGGyjY",
+            authDomain: "t2ptimesheetmanagement.firebaseapp.com",
+            databaseURL: "https://t2ptimesheetmanagement.firebaseio.com",
+            projectId: "t2ptimesheetmanagement",
+            storageBucket: "t2ptimesheetmanagement.appspot.com",
+            messagingSenderId: "953506312223"
+        };
+        firebase.initializeApp(config);
+    </script>
+
 
     <script src="scripts/angular.min.js"></script>
     <script src="scripts/angular-ui-router.min.js"></script>
@@ -37,10 +58,12 @@
 
     <script src="app/app.js"></script>
     <script src="app/services/timesheetService.js"></script>
+    <script src="app/services/convertService.js"></script>
     <script src="app/sprint.controller.js"></script>
     <script src="app/timesheet.controller.js"></script>
     <script src="app/directives/timeline.directive.js"></script>
-    
+
     <script src="app/app.value.js"></script>
 </body>
+
 </html>
