add authorize for timesheet

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en" ng-app="myApp" class="no-js">
+<html lang="en" class="no-js">
 
 <head>
     <meta charset="utf-8">
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <div ng-app="myApp" class="container-fluid">        
+    <div class="container-fluid">        
         <ui-view></ui-view>
     </div>
 
@@ -55,6 +55,7 @@
     <script src="scripts/angular-animate.min.js"></script>
     <script src="scripts/angular-aria.min.js"></script>
     <script src="scripts/angular-material.js"></script>
+    <script src="scripts/hotkey.js"></script>
 
 
     <script src="scripts/jquery-roadmap/jquery.roadmap.js"></script>
