--- a/app/timesheet.controller.html
+++ b/app/timesheet.controller.html
@@ -1,8 +1,8 @@
 ﻿<div style="padding: 100px" class=timesheet ng-cloak>
-    <h2 class="md-display-1">{{model.week.title}}
+    <h2 class="md-display-1 mb-4">{{model.week.title}}
             <span class="badge badge-secondary" ng-if="model.currentWeek == model.weekNumber">Current</span>
     </h2>
-    <md-grid-list md-cols="12" md-row-height="100px">
+    <md-grid-list md-cols="12" md-row-height="100px" class="mb-4">
         <md-grid-tile>
             <md-button class="md-primary" type="submit" ng-click="model.prevWeek()">
                 Prev
@@ -26,9 +26,10 @@
             </md-button>
         </md-grid-tile>
     </md-grid-list>
-    <div style="margin-top: 20px">
+    <div style="margin-top: 50px">
         <div layout="columns" style="margin-top: 0px" ng-repeat="timeEntry in model.selectedTimesheet.timeEntries">
             <md-input-container flex="10">
+                <label ng-if="$index === 0">Start time</label>
                 <md-icon class="name" ng-click="model.setStartTime(timeEntry)">
                     <i class="fas fa-clock fa-lg"></i>
                 </md-icon>
@@ -36,6 +37,7 @@
 
             </md-input-container>
             <md-input-container flex="10">
+                <label ng-if="$index === 0">End time</label>
                 <md-icon class="name" ng-click="model.setEndTime(timeEntry)">
                     <i class="fas fa-clock fa-lg"></i>
                 </md-icon>
@@ -43,9 +45,11 @@
                 <pre>{{timeEntry.endTime.format("yyyyMMDD hhmm")}}</pre>
             </md-input-container>
             <md-input-container flex="10">
+                <label ng-if="$index === 0">Duration</label>
                 <input type="text" id="inlineFormInputName2" ng-model="timeEntry.duration">
             </md-input-container>
             <md-input-container flex="70">
+                <label ng-if="$index === 0">Description</label>
                 <input type="text" id="inlineFormInputName2" ng-model="timeEntry.description">
                 <md-icon ng-click="model.deleteTimeEntry($index)">
                     <i class="fas fa-trash-alt fa-lg"></i>
