--- a/app/app.html
+++ b/app/app.html
@@ -1,5 +1,6 @@
 <nav class="nav">
     <a class="nav-link" ui-sref-active="active" ui-sref="main.sprint">Sprint</a>
     <a class="nav-link" ui-sref-active="active" ui-sref="main.timesheet">Timesheet</a>
+    <a class="nav-link" ui-sref-active="active" ui-sref="main.order">Order</a>
 </nav>
 <ui-view></ui-view>
