--- a/index.html
+++ b/index.html
@@ -63,9 +63,12 @@
     <script src="app/app.js"></script>
     <script src="app/services/timesheetService.js"></script>
     <script src="app/services/convertService.js"></script>
+    <script src="app/services/openProjectService.js"></script>
+    <script src="app/services/orderService.js"></script>
     <script src="app/sprint.controller.js"></script>
     <script src="app/timesheet.controller.js"></script>
     <script src="app/login.controller.js"></script>
+    <script src="app/order.controller.js"></script>
     <script src="app/directives/timeline.directive.js"></script>
 
     <script src="app/app.value.js"></script>
