add order detail page

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
     <script src="app/timesheet.controller.js"></script>
     <script src="app/login.controller.js"></script>
     <script src="app/order.controller.js"></script>
+    <script src="app/orderDetail.controller.js"></script>
     <script src="app/directives/timeline.directive.js"></script>
 
     <script src="app/app.value.js"></script>
