--- a/app/order.controller.html
+++ b/app/order.controller.html
@@ -4,59 +4,56 @@
             <div class="col-sm">
                 <div class="row">
                     <div class="col">
+                        <h4>List Order</h4>
+                        <ul class="list-group">
+                            <a href="" class="list-group-item list-group-item-action" ng-repeat="order in model.orders"
+                                ng-click="model.selectOrder(order)">
+                                <strong>{{order.menuUrl | maxLength:75}}</strong>
+                                <small>{{order.date.format('dddd DD.MM.YYYY hh:mm:ss')}}</small>
+
+                                <span class="fa-pull-right">
+                                    <i class="fas fa-lock" ng-click="model.lockOrder(order, $event)" ng-if="order.status === 'active'"></i>
+                                    <i class="fas fa-unlock-alt" ng-click="model.unlockOrder(order, $event)" ng-if="order.status === 'locked'"></i>
+                                    <i class="fas fa-trash-alt" ng-click="model.removeOrder(order, $event)"></i>
+                                </span>
+                            </a>
+                        </ul>
+                    </div>
+                </div>
+                <div class="row" style="margin-top: 40px">
+                    <div class="col">
                         <form>
                             <div class="input-group mb-3">
-                                <input type="text" class="form-control" placeholder="https://foody.com" aria-label="https://foody.com"
-                                    aria-describedby="basic-addon2" ng-model="model.websiteUrl">
+                                <input type="text" class="form-control" placeholder="https://foody.com/" ng-model="model.menuUrl">
                                 <div class="input-group-append">
-                                    <button class="btn btn-outline-secondary" ng-click="model.goToWebsite()">Go!</span>
+                                    <button class="btn btn-outline-dark" ng-disabled="!model.menuUrl" ng-click="model.createNewOrder()">Create
+                                        new order</span>
                                 </div>
                             </div>
                         </form>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col" ng-if="model.trustedWebsiteUrl">
-                        <iframe class="order-website" ng-src="{{model.trustedWebsiteUrl}}"></iframe>
-                    </div>
-                    <div class="col" ng-if="!model.trustedWebsiteUrl">
-                        Nothing to show
-                    </div>
-                </div>
             </div>
-
-
             <div class="col-sm">
-                <button class="btn btn-link" ng-click="model.createNewOrder()">
-                    <i class="fas fa-plus fa-lg"></i>
-                    <span class="h4">Create new order</h4>
-                </button>
-
-                <div class="row">
-                    <div class="col-8">
-                        <ul class="list-group">
-                            <a href="" class="list-group-item list-group-item-action" ng-repeat="order in model.activeOrders"
-                                ng-click="model.selectOrder(order)">
-                                {{order.date.format('dddd DD.MM.YYYY hh:ss')}}
-                                <small>{{order.key}}</small>
-                                <span class="fa-pull-right"><i class="fas fa-trash-alt pull-right" ng-click="model.removeOrder(order, $event)"></i></span>
-                                
-                            </a>
-
-                        </ul>
-
-                    </div>
-                </div>
-                <div class="row" ng-if="model.selectedOrder" style="margin-top: 20px">
+                <div class="row" ng-if="model.selectedOrder">
                     <div class="col">
-                        <table class="table">
+                        <h4 class="order-detail-link" ng-click="model.goToOrderDetail()">Order Detail 
+                                <span class="badge badge-secondary" ng-if="model.selectedOrder.status === 'locked'">locked</span>
+                                <span class="badge badge-primary" ng-if="model.selectedOrder.status === 'active'">active</span>
+                        </h4>
+                        <!-- <a href="" class="alert-link" ng-click="model.goToOrderDetail()">
+                            <span class="h4">Order Detail</span>
+                            
+                        </a> -->
+
+
+                        <table class="table table-bordered">
                             <thead>
                                 <tr>
                                     <th scope="col">#</th>
                                     <th scope="col">Name</th>
                                     <th scope="col">Order</th>
                                     <th scope="col">Price</th>
-                                    <th scope="col">Action</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -64,42 +61,14 @@
                                     <td>{{$index + 1}}</td>
                                     <td>{{orderDetail.name}}</td>
                                     <td>{{orderDetail.desc}}</td>
-                                    <td>{{orderDetail.price | currency: "$":0}}</td>
-                                    <td>
-                                            <i class="fas fa-edit" ng-click="model.editOrderDetail($index, orderDetail)"></i>
-                                        <i class="fas fa-trash-alt" ng-click="model.removeOrderDetail($index)"></i>
-                                    </td>
+                                    <td>{{orderDetail.price | currency: "":0}}</td>
                                 </tr>
                                 <tr ng-if="model.selectedOrder.detail && model.selectedOrder.detail.length > 0">
                                     <td colspan="3" class="text-center">Total</td>
-                                    <td>{{model.calculateOrderPrice() | currency: "$":0 }}</td>
+                                    <td>{{model.calculateOrderPrice() | currency: "":0 }}</td>
                                 </tr>
                             </tbody>
                         </table>
-                    </div>
-                </div>
-                <div class="row" ng-if="model.selectedOrder" style="margin-top: 40px">
-                    <div class="col-6">
-                        <fieldset class="fieldset-border">
-                            <legend>Order Detail:</legend>
-                            <form>
-                                <div class="form-group">
-                                    <label>Name</label>
-                                    <input type="text" class="form-control" placeholder="your name" ng-model="model.orderDetail.name">
-                                </div>
-                                <div class="form-group">
-                                    <label>Order</label>
-                                    <input type="text" class="form-control" placeholder="would you like something ?"
-                                        ng-model="model.orderDetail.desc">
-                                </div>
-                                <div class="form-group">
-                                    <label>Price</label>
-                                    <input type="text" class="form-control" placeholder="e.g. 54.000" ng-model="model.orderDetail.price">
-                                </div>
-                                <button type="submit" class="btn btn-primary" ng-click="model.submitOrder()"
-                                    ng-disabled="!model.orderDetail.name || !model.orderDetail.desc">Submit</button>
-                            </form>
-                        </fieldset>
                     </div>
                 </div>
             </div>
